--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <header class="site-header middle">
       <div class="hero">
-        <img src="assets/NeuSolarstromstattErdgasstrom - weiss.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
+        <img src="assets/Logo.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
         <div>
           <h1>Solarstrom statt Erdgas-Strom</h1>
           <p class="tagline">Informieren. Mitmachen. Briefe an Abgeordnete – wir drucken & versenden physisch.</p>
@@ -187,3 +187,4 @@
   </script>
 </body>
 </html>
+
