--- a/index-full.html
+++ b/index-full.html
@@ -33,7 +33,7 @@
   <div class="page">
     <header class="site-header middle">
       <div class="hero">
-        <img src="assets/NeuSolarstromstattErdgasstrom - weiss.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
+        <img src="assets/logo.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
         <div>
           <h1>Solarstrom statt Erdgas-Strom</h1>
           <p class="tagline">Sie schreiben den Brief – wir übernehmen Ausdruck und Postversand an die Abgeordneten.</p>
@@ -116,14 +116,26 @@
             <textarea id="message" name="message" rows="18" required>
 Sehr geehrte:r {Anrede_Name},
 
-bitte setzen Sie sich dafür ein, dass Solar-Direktstrom in Deutschland eindeutig Vorrang vor Erdgas-Strom hat – rechtlich wie praktisch. Es braucht:
-• klare Prioritäten in Gesetzen und Verordnungen,
-• ein Netz- und Marktdesign, das flexible Direktnutzung fördert,
-• weniger Hürden für Prosumer, Kommunen und KMU.
+heute möchte ich mich an Sie wenden, um ihre Aufmerksamkeit auf ein Thema zu lenken das für sehr viele Bürgerinnen, Bürger und Unternehmen in Ihrem Wahlkreis sehr relevant ist: Die Fortsetzung der Energiewende.
 
-Solarstrom senkt Kosten, erhöht die Versorgungssicherheit und schützt unsere Lebensgrundlagen. Deshalb sollte die Politik ihn nicht nur fördern, sondern ihm einen klaren Vorrang vor fossilem Erdgasstrom einräumen.
+Bürgerinnen, Bürger und Unternehmen investieren mit Photovoltaik und Speicher in die Energiewende und den Klimaschutz. Die eigene produzierte Energie wird direkt und über den Stromspeicher selber genutzt. Das ist ökonomisch und ökologisch sinnvoll.
 
-Mit freundlichen Grüßen  
+Möglich wurde dies durch das EEG (Erneuerbare Energien Gesetz). Doch jetzt steht diese erfolgreiche Entwicklung vor dem Abbruch. Bundesministerin Reiche möchte die Energiewende drosseln, neue Erdgaskraftwerke bauen und die feste Einspeisevergütung abschaffen. Außerdem plant die Bundesnetzagentur mit ihrem Diskussionspapier AgNes eine massive Verschlechterung der Wirtschaftlichkeit für Produzenten von regenerativer Energie. Dagegen möchte ich mich mit diesem Brief an Sie wenden und die Forderungen der Initiative „Sonnenstrom statt Erdgasstrom“ unterstützen. Die Forderungen sind:
+
+1. Keine neuen Erdgaskraftwerke. Spitzenlast mit Bioenergie, Wasserkraft und Speichern abdecken.
+
+2. Ausbau Erneuerbarer beschleunigen – und netzdienliche Erzeugung belohnen.
+
+3. Feste Einspeisevergütung beibehalten bis Smart Meter flächendeckend eine einfache, flexible Vergütung erlauben.
+
+4. Bestandsschutz und keine Zusatzbelastung für erneuerbare Stromerzeugung.
+
+Dieser Brief entstand im Zusammenhang der Aktion „Eigenstrom statt Kohlestrom“. Weitere Informationen zu den Plänen von Frau Reiche und der BNetzA finden Sie auf https://www.aktionsolarstrom.de.
+
+Vielen Dank für ihre Aufmerksamkeit und Mühe. Es würde mich sehr freuen von Ihnen zu hören.
+
+Mit freundlichen Grüßen
+  
 {Vorname} {Nachname}  
 {Straße}  
 {PLZ} {Ort}
@@ -244,3 +256,4 @@ Mit freundlichen Grüßen
   </script>
 </body>
 </html>
+
