--- a/index-full.html
+++ b/index-full.html
@@ -170,7 +170,7 @@ Mit freundlichen Grüßen
 
     <footer class="site-footer middle">
       <nav class="legal">
-        <a href="impressum.html">Impressum</a> · <a href="datenschutz.html">Datenschutz</a>
+        <a href="Impressum.html">Impressum</a> · <a href="Datenschutz.html">Datenschutz</a>
       </nav>
       <p style="text-align:center">© Kampagne „Solarstrom statt Erdgas-Strom“</p>
     </footer>
@@ -256,4 +256,5 @@ Mit freundlichen Grüßen
   </script>
 </body>
 </html>
+
 
