--- a/Impressum.html
+++ b/Impressum.html
@@ -50,13 +50,11 @@ html .jqueryslidemenu{height: 1%;} /*Holly Hack for IE7 and below*/
             <tr valign="top"> 
               <td width="403" height="211" valign="middle"> 
                 <p align="left"><strong><font color="#FFFFFF" size="3"><br>
-                  <img src="gfx/Y-M%E4nnchen-schwarz%20100Prozent%20MIB.png" width="242" height="192" align="middle"> 
+                  <img src="logo.png" width="242" height="192" align="middle"> 
                   </font></strong></p>
               <td width="797" valign="top"> <div id="myslidemenu" class="jqueryslidemenu"> 
                 <ul>
-                  <li><a href="mib-Leistungen.htm"><font face="Century Gothic">Leistungen</font></a></li>
-                  <li><a href="http://www.muc-mib.de"><font face="Century Gothic">Home</font></a></li>
-                  <li><font face="Century Gothic"><a href="mib-Impressum.htm">Impressum</a></font></li>
+                  <li><a href="http://www.aktionsolarstrom.de"><font face="Century Gothic">Home</font></a></li>
                   <li><font face="Century Gothic"><br>
                     </font></li>
                 </ul></tr>
@@ -138,3 +136,4 @@ html .jqueryslidemenu{height: 1%;} /*Holly Hack for IE7 and below*/
 </div>
 </body>
 </html>
+
