--- a/Impressum.html
+++ b/Impressum.html
@@ -50,7 +50,7 @@ html .jqueryslidemenu{height: 1%;} /*Holly Hack for IE7 and below*/
             <tr valign="top"> 
               <td width="403" height="211" valign="middle"> 
                 <p align="left"><strong><font color="#FFFFFF" size="3"><br>
-                  <img src="logo.png" width="242" height="192" align="middle"> 
+                  <img src="assets/logo.png" width="242" height="192" align="middle"> 
                   </font></strong></p>
               <td width="797" valign="top"> <div id="myslidemenu" class="jqueryslidemenu"> 
                 <ul>
@@ -136,4 +136,5 @@ html .jqueryslidemenu{height: 1%;} /*Holly Hack for IE7 and below*/
 </div>
 </body>
 </html>
+
 
