--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
     <footer class="site-footer middle">
       <nav class="legal">
-        <a href="impressum.html">Impressum</a> · <a href="datenschutz.html">Datenschutz</a>
+        <a href="Impressum.html">Impressum</a> · <a href="Datenschutz.html">Datenschutz</a>
       </nav>
       <p style="text-align:center">© Kampagne „Solarstrom statt Erdgas-Strom“</p>
     </footer>
@@ -187,5 +187,6 @@
   </script>
 </body>
 </html>
+
 
 
