--- a/index-full.html
+++ b/index-full.html
@@ -191,8 +191,8 @@ Mit freundlichen Grüßen
   <!-- MdB-Autoauswahl: PLZ -> Wahlkreis -> MdB (Pfade ggf. anpassen) -->
   <script>
   (() => {
-    const PLZ_WK_URL = 'data/plz_to_wk.json';
-    const WK_MDB_URL = 'data/wk_to_mdb.json';
+    const PLZ_WK_URL = 'assets/data/plz_to_wk.json';
+    const WK_MDB_URL = 'assets/data/wk_to_mdb.json';
 
     const zipEl = document.getElementById('zip');
     const cityEl = document.getElementById('city');
@@ -331,6 +331,7 @@ Mit freundlichen Grüßen
   </script>
 </body>
 </html>
+
 
 
 
