--- a/index-full.html
+++ b/index-full.html
@@ -20,7 +20,7 @@
       padding: 28px 0 10px; text-align:center;
     }
     .hero img {
-      width:min(95vw, 620px); /* richtig groß */
+      width:min(95vw, 620px);
       height:auto; display:block;
     }
     .tagline { margin: 8px 0 0; font-size: 1.1rem; color:#333; }
@@ -57,7 +57,6 @@
 
     <header class="site-header middle">
       <div class="hero">
-        <!-- Großes Logo (lege das Bild als assets/logo.png ins Repo) -->
         <img src="assets/logo.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
         <div style="flex-basis:100%"></div>
         <p class="tagline">Sie schreiben den Brief – wir übernehmen Ausdruck und Postversand an die Abgeordneten.</p>
@@ -79,7 +78,6 @@
       <section id="brief" class="form-section">
         <h2>Brief einreichen</h2>
 
-        <!-- Wichtig: method/action sind egal, wir senden per Fetch(JSON). action bleibt /api/queue -->
         <form id="letterForm" method="post" action="/api/queue" novalidate>
           <fieldset>
             <legend>Ziel-Abgeordnete:r</legend>
@@ -88,7 +86,6 @@
             <div class="grid">
               <div>
                 <label for="plz">Ihre PLZ *</label>
-                <!-- id=plz (für Auto-MdB), name=zip (für API) -->
                 <input id="plz" name="zip" inputmode="numeric" pattern="\d{5}" required placeholder="z. B. 80937">
               </div>
               <div>
@@ -98,7 +95,6 @@
             </div>
 
             <label for="abgeordneter">Name der/s Abgeordneten (optional)</label>
-            <!-- id=abgeordneter (für Auto-MdB), name=mp_name (für API) -->
             <input id="abgeordneter" name="mp_name" placeholder="z. B. Max Mustermann, MdB">
           </fieldset>
 
@@ -152,7 +148,8 @@
             </div>
 
             <label for="message">Brieftext *</label>
-            <textarea id="message" name="message" required>bitte setzen Sie sich dafür ein, dass Solar-Direktstrom in Deutschland eindeutig Vorrang vor Erdgas-Strom hat – rechtlich wie praktisch. Es braucht:
+            <textarea id="message" name="message" required>
+bitte setzen Sie sich dafür ein, dass Solar-Direktstrom in Deutschland eindeutig Vorrang vor Erdgas-Strom hat – rechtlich wie praktisch. Es braucht:
 • klare Prioritäten in Gesetzen und Verordnungen,
 • Netz- und Marktdesign, das flexible Direktnutzung fördert,
 • weniger Hürden für Prosumer, Kommunen und KMU.
@@ -162,7 +159,8 @@ Das stärkt Versorgungssicherheit, senkt Kosten und schützt unsere Lebensgrundl
 Mit freundlichen Grüßen
 {Vorname} {Nachname}
 {Straße}
-{PLZ} {Ort}</textarea>
+{PLZ} {Ort}
+            </textarea>
 
             <label class="checkbox-inline">
               <input id="consent_print" name="consent_print" type="checkbox" required>
@@ -211,7 +209,7 @@ Mit freundlichen Grüßen
 
   </div><!-- /page -->
 
-  <!-- JSON-Submit: sendet an /api/queue und zeigt Vorgangs-ID -->
+  <!-- JSON-Submit -->
   <script>
   (function(){
     const form = document.getElementById('letterForm');
@@ -221,7 +219,6 @@ Mit freundlichen Grüßen
       e.preventDefault();
 
       const data = Object.fromEntries(new FormData(form).entries());
-      // Checkboxen explizit als Boolean
       data.consent_print = !!document.getElementById('consent_print').checked;
       data.copy_to_self  = !!document.getElementById('copy_to_self').checked;
 
@@ -249,7 +246,7 @@ Mit freundlichen Grüßen
   })();
   </script>
 
-  <!-- Auto-MdB: PLZ → Wahlkreis → MdB (mit Fallback „Sehr geehrte Damen und Herren“) -->
+  <!-- Auto-MdB: PLZ → Wahlkreis → MdB -->
   <script>
 (function () {
   const $ = (s) => document.querySelector(s);
@@ -260,27 +257,16 @@ Mit freundlichen Grüßen
   const elMSG = tryAll(['#message', 'textarea[name="message"]']);
   if (!elPLZ || !elMSG) return;
 
-  // --- Sanitizer & Helfer ---
   const cleanName = (name) =>
-    String(name || '')
-      .replace(/^\s*nan\s+/i, '')
-      .replace(/\s+/g,' ')
-      .trim();
+    String(name || '').replace(/^\s*nan\s+/i, '').replace(/\s+/g,' ').trim();
 
   const cleanAnrede = (anrede) => {
-    const a = String(anrede || '')
-      .replace(/^\s*nan\s+/i, '')
-      .trim();
+    const a = String(anrede || '').replace(/^\s*nan\s+/i, '').trim();
     return a || 'Sehr geehrte Damen und Herren';
   };
 
-  // einzeilig fürs Hidden-Feld
-  const addrOneLine = (addr) =>
-    String(addr || '').replace(/\s*\n\s*/g, ', ').replace(/\s+/g,' ').trim();
-
-  // mehrzeilig für den Brieftext
-  const addrMultiLine = (addr) =>
-    String(addr || '').replace(/\s*\n\s*/g, '\n').trim();
+  const addrOneLine = (addr) => String(addr || '').replace(/\s*\n\s*/g, ', ').replace(/\s+/g,' ').trim();
+  const addrMultiLine = (addr) => String(addr || '').replace(/\s*\n\s*/g, '\n').trim();
 
   async function loadJson(url) {
     const res = await fetch(url, { cache:'no-store' });
@@ -295,36 +281,30 @@ Mit freundlichen Grüßen
     ]);
     const wks = plzMap[plz];
     if (!wks || !wks.length) return null;
-    const wk = String(wks[0]);
-    return wkMap[wk] || null;
+    return wkMap[String(wks[0])] || null;
   }
 
+  // NEU: Adresse zuerst, dann Anrede
   function ensureIntroAndAddress(textarea, anrede, addrML) {
-    let txt = textarea.value || '';
+    let body = (textarea.value || '').trimStart();
 
-    // 1) Anrede nur einmal vorn einsetzen
-    if (!/^\s*Sehr\s/i.test(txt)) {
-      txt = (anrede + '\n\n' + txt.trimStart());
+    if (addrML && body.includes('{MdB_Adresse}')) {
+      body = body.replace('{MdB_Adresse}', addrML);
     }
 
-    // 2) MdB-Adresse einfügen:
-    //    - Wenn Platzhalter vorhanden, dort ersetzen
-    //    - Sonst nach der Anrede (1. Leerzeile) einfügen – aber nur einmal
-    if (addrML) {
-      if (txt.includes('{MdB_Adresse}')) {
-        txt = txt.replace('{MdB_Adresse}', addrML);
-      } else if (!txt.includes(addrML)) {
-        // nach der ersten Leerzeile nach der Anrede einfügen
-        const parts = txt.split(/\n\s*\n/);
-        if (parts.length > 1) {
-          txt = parts[0] + '\n' + addrML + '\n\n' + parts.slice(1).join('\n\n');
-        } else {
-          txt = addrML + '\n\n' + txt; // Fallback
-        }
-      }
+    const hasAddress = addrML ? body.includes(addrML) : false;
+    const hasAnrede  = /^\s*Sehr\s/i.test(body);
+
+    const headerParts = [];
+    if (addrML && !hasAddress) headerParts.push(addrML);
+    if (anrede && !hasAnrede)  headerParts.push(anrede);
+
+    if (headerParts.length) {
+      const header = headerParts.join('\n\n') + '\n\n';
+      body = header + body.trimStart();
     }
 
-    textarea.value = txt.trimEnd();
+    textarea.value = body.trimEnd();
   }
 
   async function handlePLZChange() {
@@ -334,16 +314,14 @@ Mit freundlichen Grüßen
     try {
       const mdb = await findMdBByPLZ(plz);
       if (mdb) {
-        const name = cleanName(mdb.mdb_name) || [mdb.vorname, mdb.nachname].filter(Boolean).join(' ');
+        const name = cleanName(mdb.mdb_name);
         if (elMP) elMP.value = name;
 
         const anrede = cleanAnrede(mdb.anrede);
         const addrML = addrMultiLine(mdb.bundestag_address);
 
-        // Einfügen in den Brief (Anrede + mehrzeilige Adresse)
         ensureIntroAndAddress(elMSG, anrede, addrML);
 
-        // Hidden-Feld mit einzeiliger Adresse fürs Backend
         let addr = document.getElementById('mp_address');
         if (!addr) {
           addr = document.createElement('input');
@@ -354,14 +332,11 @@ Mit freundlichen Grüßen
         }
         addr.value = addrOneLine(mdb.bundestag_address);
 
-        console.log('Auto-MdB:', plz, '→', name);
       } else {
         if (elMP) elMP.value = '';
         ensureIntroAndAddress(elMSG, 'Sehr geehrte Damen und Herren', '');
-        console.warn('Auto-MdB:', plz, '→ kein WK/MdB gefunden (Fallback gesetzt).');
       }
     } catch (e) {
-      console.error('Auto-MdB Fehler:', e);
       ensureIntroAndAddress(elMSG, 'Sehr geehrte Damen und Herren', '');
     }
   }
@@ -370,8 +345,6 @@ Mit freundlichen Grüßen
   if (elPLZ.value && /^\d{5}$/.test(elPLZ.value.trim())) handlePLZChange();
 })();
 </script>
-
-
 
 </body>
 </html>
