--- a/index-full.html
+++ b/index-full.html
@@ -137,30 +137,17 @@ Mit freundlichen Grüßen
     }
 
     function ensureIntroAndAddress(anrede, addrWithName) {
-      // setzt Anrede und Name+Adresse nur einmal vorn ein
+      // ersetzt NUR die Platzhalter; keine Anrede mehr „nach oben“ schieben
       let txt = elMSG.value || '';
 
-      // Anrede einfügen, falls nicht vorhanden
-      if (!/^\s*Sehr\s/i.test(txt)) {
-        txt = anrede + '\n\n' + txt.trimStart();
-      }
-
-      // Platzhalter {MdB_Name_und_Adresse} ersetzen oder nach Anrede einsetzen
-      if (addrWithName) {
-        if (txt.includes('{MdB_Name_und_Adresse}')) {
-          txt = txt.replace('{MdB_Name_und_Adresse}', addrWithName);
-        } else if (!txt.includes(addrWithName)) {
-          const parts = txt.split(/\n\s*\n/);
-          if (parts.length > 1) {
-            txt = parts[0] + '\n' + addrWithName + '\n\n' + parts.slice(1).join('\n\n');
-          } else {
-            txt = addrWithName + '\n\n' + txt;
-          }
-        }
-      }
+      // Sicher: beide Varianten ersetzen, falls alter Platzhalter noch irgendwo existiert
+      txt = txt.replace('{MdB_Name_und_Adresse}', addrWithName || '')
+               .replace('{MdB_Adresse}', addrWithName || '')
+               .replace('{Anrede}', anrede || '');
 
       elMSG.value = txt.trimEnd();
-      // Vorlage sichern (mit Tokens für Absenderdaten)
+
+      // Vorlage (für spätere Absenderdaten-Ersetzung) speichern
       elMSG.dataset.tpl = elMSG.value;
     }
 
@@ -175,7 +162,7 @@ Mit freundlichen Grüßen
 
           const anrede = clean(mdb.anrede) || 'Sehr geehrte Damen und Herren';
           const addrML  = String(mdb.bundestag_address||'').replace(/\s*\n\s*/g,'\n').trim();
-          const addrWithName = (name ? name + '\n' : '') + addrML; // <- MdB über der Bundestagsadresse
+          const addrWithName = (name ? name + '\n' : '') + addrML; // MdB über der Bundestagsadresse
 
           ensureIntroAndAddress(anrede, addrWithName);
         }
@@ -187,18 +174,16 @@ Mit freundlichen Grüßen
   })();
   </script>
 
-  <!-- Token-Ersetzung live (mit Straßen-Kommafix) -->
+  <!-- Token-Ersetzung live (inkl. Straßen-Kommafix) -->
   <script>
   (function(){
     const $ = (s) => document.querySelector(s);
     const form=$('#letterForm'), msg=$('#message');
 
-    // Tokens -> Felder
     const F={'{Vorname}':'#first_name','{Nachname}':'#last_name','{Straße}':'#street','{PLZ}':'#sender_zip','{Ort}':'#sender_city'};
-
     const esc=s=>s.replace(/[.*+?^${}()|[\]\\]/g,'\\$&');
 
-    // Sanitizer: entfernt Komma vor Hausnummer (z.B. "Musterstrasse, 2b" -> "Musterstrasse 2b")
+    // „Musterstraße, 2b“ -> „Musterstraße 2b“
     const cleanStreet = (v) => String(v||'').replace(/\s*,\s*(?=\d)/g,' ').replace(/\s{2,}/g,' ').trim();
 
     function vals(){
@@ -221,15 +206,13 @@ Mit freundlichen Grüßen
 
     function update(){
       if(!msg)return;
-      if(!msg.dataset.tpl) msg.dataset.tpl = msg.value; // Vorlage mit Tokens sichern
+      if(!msg.dataset.tpl) msg.dataset.tpl = msg.value;
       msg.value = apply(msg.dataset.tpl, vals());
     }
 
-    // Live-Updates
     Object.values(F).forEach(sel=>$(sel)?.addEventListener('input',update));
     update();
 
-    // Check vorm Senden: keine Token übrig
     form?.addEventListener('submit',e=>{
       update();
       if(/\{Vorname\}|\{Nachname\}|\{Straße\}|\{PLZ\}|\{Ort\}/.test(msg.value)){
