--- a/index-full.html
+++ b/index-full.html
@@ -139,16 +139,11 @@ Mit freundlichen Grüßen
     function ensureIntroAndAddress(anrede, addrWithName) {
       // ersetzt NUR die Platzhalter; keine Anrede mehr „nach oben“ schieben
       let txt = elMSG.value || '';
-
-      // Sicher: beide Varianten ersetzen, falls alter Platzhalter noch irgendwo existiert
       txt = txt.replace('{MdB_Name_und_Adresse}', addrWithName || '')
                .replace('{MdB_Adresse}', addrWithName || '')
                .replace('{Anrede}', anrede || '');
-
       elMSG.value = txt.trimEnd();
-
-      // Vorlage (für spätere Absenderdaten-Ersetzung) speichern
-      elMSG.dataset.tpl = elMSG.value;
+      elMSG.dataset.tpl = elMSG.value; // Vorlage speichern
     }
 
     async function handlePLZ() {
@@ -159,11 +154,9 @@ Mit freundlichen Grüßen
         if (mdb) {
           const name = clean(mdb.mdb_name) || [mdb.vorname, mdb.nachname].filter(Boolean).join(' ');
           if (elMP) elMP.value = name;
-
           const anrede = clean(mdb.anrede) || 'Sehr geehrte Damen und Herren';
           const addrML  = String(mdb.bundestag_address||'').replace(/\s*\n\s*/g,'\n').trim();
           const addrWithName = (name ? name + '\n' : '') + addrML; // MdB über der Bundestagsadresse
-
           ensureIntroAndAddress(anrede, addrWithName);
         }
       } catch(e){}
@@ -174,14 +167,18 @@ Mit freundlichen Grüßen
   })();
   </script>
 
-  <!-- Token-Ersetzung live (inkl. Straßen-Kommafix) -->
+  <!-- Token-Ersetzung live (mit Fallback auf obere PLZ/Ort + Straßen-Kommafix) -->
   <script>
   (function(){
     const $ = (s) => document.querySelector(s);
     const form=$('#letterForm'), msg=$('#message');
 
+    // Tokens -> Felder
     const F={'{Vorname}':'#first_name','{Nachname}':'#last_name','{Straße}':'#street','{PLZ}':'#sender_zip','{Ort}':'#sender_city'};
     const esc=s=>s.replace(/[.*+?^${}()|[\]\\]/g,'\\$&');
+
+    const topPLZ  = () => ($('#plz')?.value||'').trim();
+    const topCity = () => ($('#city')?.value||'').trim();
 
     // „Musterstraße, 2b“ -> „Musterstraße 2b“
     const cleanStreet = (v) => String(v||'').replace(/\s*,\s*(?=\d)/g,' ').replace(/\s{2,}/g,' ').trim();
@@ -191,6 +188,9 @@ Mit freundlichen Grüßen
       for (const [tok,sel] of Object.entries(F)) {
         let v = ($(sel)?.value||'').trim();
         if (tok === '{Straße}') v = cleanStreet(v);
+        // Fallbacks: wenn Absender-PLZ/-Ort leer, nimm obere PLZ/Ort
+        if (tok === '{PLZ}' && !v) v = topPLZ();
+        if (tok === '{Ort}' && !v) v = topCity();
         m[tok]=v;
       }
       return m;
@@ -210,17 +210,21 @@ Mit freundlichen Grüßen
       msg.value = apply(msg.dataset.tpl, vals());
     }
 
-    Object.values(F).forEach(sel=>$(sel)?.addEventListener('input',update));
+    // Live-Updates – sowohl Absenderfelder als auch obere PLZ/Ort
+    [...Object.values(F), '#plz', '#city'].forEach(sel=>$(sel)?.addEventListener('input',update));
     update();
 
     form?.addEventListener('submit',e=>{
       update();
-      if(/\{Vorname\}|\{Nachname\}|\{Straße\}|\{PLZ\}|\{Ort\}/.test(msg.value)){
+      // Mindestens Name + Straße müssen ausgefüllt sein; PLZ/Ort kommt notfalls von oben
+      if(/\{Vorname\}|\{Nachname\}|\{Straße\}/.test(msg.value)){
         e.preventDefault();
-        alert('Bitte füllen Sie alle Absenderfelder aus.');
+        alert('Bitte füllen Sie Vorname, Nachname und Straße & Nr. aus.');
       }
     });
   })();
   </script>
 </body>
 </html>
+
+
