--- a/index-full.html
+++ b/index-full.html
@@ -85,7 +85,7 @@
           <fieldset>
             <legend>Brief</legend>
             <label for="subject">Betreff *</label>
-            <input id="subject" name="subject" required value="Solarstrom vor Erdgas-Strom – bitte setzen Sie klare Prioritäten">
+            <input id="subject" name="subject" required value="Sonnenstrom statt Erdgasstrom – bitte setzen Sie klare Prioritäten">
 
             <label for="message">Brieftext *</label>
             <textarea id="message" name="message" required>
@@ -93,26 +93,22 @@
 
 {Anrede}
 
-heute möchte ich mich an Sie wenden, um ihre Aufmerksamkeit auf ein Thema zu lenken das für sehr viele Bürgerinnen, Bürger und Unternehmen in Ihrem Wahlkreis sehr relevant ist: Die Fortsetzung der Energiewende.
+heute möchte ich mich an Sie wenden, um Ihre Aufmerksamkeit auf ein Thema zu lenken, das für sehr viele Bürgerinnen, Bürger und Unternehmen in Ihrem Wahlkreis sehr relevant ist: die Fortsetzung der Energiewende.
 
-Bürgerinnen, Bürger und Unternehmen investieren mit Photovoltaik und Speicher in die Energiewende und den Klimaschutz. Die eigene produzierte Energie wird direkt und über den Stromspeicher selber genutzt. Das ist ökonomisch und ökologisch sinnvoll.
+Bürgerinnen, Bürger und Unternehmen investieren mit Photovoltaik und Speicher in die Energiewende und den Klimaschutz. Die selbst produzierte Energie wird direkt und über den Stromspeicher genutzt. Das ist ökonomisch und ökologisch sinnvoll.
 
-Möglich wurde dies durch das EEG (Erneuerbare Energien Gesetz). Doch jetzt steht diese erfolgreiche Entwicklung vor dem Abbruch. Bundesministerin Reiche möchte die Energiewende drosseln, neue Erdgaskraftwerke bauen und die feste Einspeisevergütung abschaffen. Außerdem plant die Bundesnetzagentur mit ihrem Diskussionspapier AgNes eine massive Verschlechterung der Wirtschaftlichkeit für Produzenten von regenerativer Energie. Dagegen möchte ich mich mit diesem Brief an Sie wenden und die Forderungen der Initiative „Sonnenstrom statt Erdgasstrom“ unterstützen. Die Forderungen sind:
+Möglich wurde dies durch das EEG (Erneuerbare-Energien-Gesetz). Doch jetzt steht diese erfolgreiche Entwicklung vor dem Abbruch. Bundesministerin Reiche möchte die Energiewende drosseln, neue Erdgaskraftwerke bauen und die feste Einspeisevergütung abschaffen. Außerdem plant die Bundesnetzagentur mit ihrem Diskussionspapier AgNes eine massive Verschlechterung der Wirtschaftlichkeit für Produzenten von regenerativer Energie. Dagegen möchte ich mich mit diesem Brief an Sie wenden und die Forderungen der Initiative „Sonnenstrom statt Erdgasstrom“ unterstützen. Die Forderungen sind:
 
-1. Keine neuen Erdgaskraftwerke. Spitzenlast mit Bioenergie, Wasserkraft und Speichern abdecken.
-
+1. Keine neuen Erdgaskraftwerke – Spitzenlast mit Bioenergie, Wasserkraft und Speichern abdecken.
 2. Ausbau Erneuerbarer beschleunigen – und netzdienliche Erzeugung belohnen.
-
-3. Feste Einspeisevergütung beibehalten bis Smart Meter flächendeckend eine einfache, flexible Vergütung erlauben.
-
+3. Feste Einspeisevergütung beibehalten, bis Smart Meter flächendeckend eine einfache, flexible Vergütung erlauben.
 4. Bestandsschutz und keine Zusatzbelastung für erneuerbare Stromerzeugung.
 
 Dieser Brief entstand im Zusammenhang der Aktion „Eigenstrom statt Kohlestrom“. Weitere Informationen zu den Plänen von Frau Reiche und der BNetzA finden Sie auf https://www.aktionsolarstrom.de.
 
-Vielen Dank für ihre Aufmerksamkeit und Mühe. Es würde mich sehr freuen von Ihnen zu hören.
+Vielen Dank für Ihre Aufmerksamkeit und Mühe. Es würde mich sehr freuen, von Ihnen zu hören.
 
 Mit freundlichen Grüßen
-
 {Vorname} {Nachname}
 {Straße}
 {PLZ} {Ort}
@@ -149,13 +145,12 @@ Mit freundlichen Grüßen
     }
 
     function ensureIntroAndAddress(anrede, addrWithName) {
-      // ersetzt NUR die Platzhalter; keine Anrede mehr „nach oben“ schieben
       let txt = elMSG.value || '';
       txt = txt.replace('{MdB_Name_und_Adresse}', addrWithName || '')
                .replace('{MdB_Adresse}', addrWithName || '')
                .replace('{Anrede}', anrede || '');
       elMSG.value = txt.trimEnd();
-      elMSG.dataset.tpl = elMSG.value; // Vorlage speichern
+      elMSG.dataset.tpl = elMSG.value;
     }
 
     async function handlePLZ() {
@@ -168,7 +163,7 @@ Mit freundlichen Grüßen
           if (elMP) elMP.value = name;
           const anrede = clean(mdb.anrede) || 'Sehr geehrte Damen und Herren';
           const addrML  = String(mdb.bundestag_address||'').replace(/\s*\n\s*/g,'\n').trim();
-          const addrWithName = (name ? name + '\n' : '') + addrML; // MdB über der Bundestagsadresse
+          const addrWithName = (name ? name + '\n' : '') + addrML;
           ensureIntroAndAddress(anrede, addrWithName);
         }
       } catch(e){}
@@ -179,20 +174,18 @@ Mit freundlichen Grüßen
   })();
   </script>
 
-  <!-- Token-Ersetzung live (mit Fallback auf obere PLZ/Ort + Straßen-Kommafix) -->
+  <!-- Token-Ersetzung live -->
   <script>
   (function(){
     const $ = (s) => document.querySelector(s);
     const form=$('#letterForm'), msg=$('#message');
 
-    // Tokens -> Felder
     const F={'{Vorname}':'#first_name','{Nachname}':'#last_name','{Straße}':'#street','{PLZ}':'#sender_zip','{Ort}':'#sender_city'};
     const esc=s=>s.replace(/[.*+?^${}()|[\]\\]/g,'\\$&');
 
     const topPLZ  = () => ($('#plz')?.value||'').trim();
     const topCity = () => ($('#city')?.value||'').trim();
 
-    // „Musterstraße, 2b“ -> „Musterstraße 2b“
     const cleanStreet = (v) => String(v||'').replace(/\s*,\s*(?=\d)/g,' ').replace(/\s{2,}/g,' ').trim();
 
     function vals(){
@@ -200,7 +193,6 @@ Mit freundlichen Grüßen
       for (const [tok,sel] of Object.entries(F)) {
         let v = ($(sel)?.value||'').trim();
         if (tok === '{Straße}') v = cleanStreet(v);
-        // Fallbacks: wenn Absender-PLZ/-Ort leer, nimm obere PLZ/Ort
         if (tok === '{PLZ}' && !v) v = topPLZ();
         if (tok === '{Ort}' && !v) v = topCity();
         m[tok]=v;
@@ -222,13 +214,11 @@ Mit freundlichen Grüßen
       msg.value = apply(msg.dataset.tpl, vals());
     }
 
-    // Live-Updates – sowohl Absenderfelder als auch obere PLZ/Ort
     [...Object.values(F), '#plz', '#city'].forEach(sel=>$(sel)?.addEventListener('input',update));
     update();
 
     form?.addEventListener('submit',e=>{
       update();
-      // Mindestens Name + Straße müssen ausgefüllt sein; PLZ/Ort kommt notfalls von oben
       if(/\{Vorname\}|\{Nachname\}|\{Straße\}/.test(msg.value)){
         e.preventDefault();
         alert('Bitte füllen Sie Vorname, Nachname und Straße & Nr. aus.');
