--- a/index-full.html
+++ b/index-full.html
@@ -217,14 +217,55 @@ Mit freundlichen Grüßen
     [...Object.values(F), '#plz', '#city'].forEach(sel=>$(sel)?.addEventListener('input',update));
     update();
 
-    form?.addEventListener('submit',e=>{
-      update();
-      if(/\{Vorname\}|\{Nachname\}|\{Straße\}/.test(msg.value)){
-        e.preventDefault();
+    // ----- NEUER SUBMIT-HANDLER (AJAX) -----
+    form?.addEventListener('submit', async (e) => {
+      e.preventDefault();          // Seite nicht verlassen
+      update();                    // Tokens final ersetzen
+
+      // minimale Validierung wie gehabt
+      if (/\{Vorname\}|\{Nachname\}|\{Straße\}/.test(msg.value)) {
         alert('Bitte füllen Sie Vorname, Nachname und Straße & Nr. aus.');
+        return;
+      }
+
+      const btn = form.querySelector('button[type="submit"]');
+      btn?.setAttribute('disabled','');
+
+      // FormData -> JSON
+      const fd = new FormData(form);
+      const body = {};
+      fd.forEach((v,k)=>body[k]=v);
+      body.copy_to_self  = fd.has('copy_to_self'); // Checkbox zu Boolean
+      body.consent_print = fd.has('consent_print');
+
+      try{
+        const res = await fetch(form.action, {
+          method: 'POST',
+          headers: { 'Content-Type':'application/json' },
+          body: JSON.stringify(body)
+        });
+        const data = await res.json();
+
+        if (data.ok){
+          const box = document.getElementById('successMessage');
+          box.textContent = 'Danke! Ihr Brief wurde erfolgreich eingereicht. Vorgangs-ID: ' + (data.queueId||'');
+          box.style.display = 'block';
+          form.reset();
+          // Vorlage nach Reset erneut setzen, damit Live-Replace weiter funktioniert
+          msg.dataset.tpl = msg.value = msg.value; 
+        } else {
+          alert('Fehler: ' + (data.error || 'Unbekannt'));
+        }
+      } catch(err){
+        alert('Verbindungsfehler: ' + err.message);
+      } finally {
+        btn?.removeAttribute('disabled');
       }
     });
+    // ----- ENDE NEUER SUBMIT-HANDLER -----
   })();
   </script>
 </body>
 </html>
+
+
